# cinema_booking_API

./: .coverage  .env.example  .env.test  .gitignore  README.md  makefile  pyproject.toml  pytest.ini
src/: test_postgres.py
src/apps/halls/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/halls/migrations/: 0001_initial.py
src/apps/movie_sessions/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/movie_sessions/migrations/: 0001_initial.py
src/apps/movies/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/movies/migrations/: 0001_initial.py  0002_movie_release_date.py  0003_alter_movie_release_date.py  0004_add_poster_url_field_to_movie.py  0005_add_poster_url_field_to_movie.py
src/apps/users/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
tests/movies/: test_api.py
